# flapit-server

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
src/: lib.rs  main.rs
