[package]
name = "flapit_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
tiny_http = "0.12.0"
regex = "1.9.6"
clap = { version = "4.4.6", features = ["derive"] }
log = "0.4.20"
env_logger = "0.11.8"
